--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "config": "^3.3.3",
     "express": "^4.17.1",
@@ -22,6 +23,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.11.18",
+    "pubsub-js": "^1.9.3",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.7"
   },
